tests/integration/snapshots/integration__conformance__n_number_u+ff11_fullwidth_digit_one.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[１]
stdout ---

stderr ---
error: unexpected character `１`. expected start of a json value
 --> stdin:1:2
  |
1 | [１]
  |  ^^
